# microservices-example

./: .gitignore  LICENSE  Makefile  README.md
api-service/: .env.example  Dockerfile  app.py  pyproject.toml
api-service/protobuf/: auth_pb2.py  auth_pb2_grpc.py  todo_pb2.py  todo_pb2_grpc.py
auth-service/: .env.example  Dockerfile  go.mod  go.sum  server.go
auth-service/db/: init.go  model.go
auth-service/protobuf/: auth.pb.go  auth_grpc.pb.go
auth-service/util/: env.go  token.go
frontend/: auth_required.js  index.html  init.js  main.js  no_auth_required.js  style.css
frontend/login/: index.html
frontend/register/: index.html
kubernetes/: api-service.yaml  auth-database.yaml  auth-service.yaml  database.yaml  frontend.yaml  persistent-volumes.yaml  todo-database.yaml  todo-service.yaml
protobuf/: auth.proto  todo.proto
todo-service/: Dockerfile  database.ts  package-lock.json  package.json  server.ts  types.ts  utils.ts
todo-service/protobuf/: todo.proto
